--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ fer==22.5.1
 #ffmpeg==1.4
 filelock==3.17.0
 Flask==3.1.0
-flask_cors
+Flask-Cors==4.0.0
 flatbuffers==25.1.21
 fonttools==4.55.5
 fsspec==2024.12.0
@@ -41,7 +41,7 @@ namex==0.0.8
 networkx==3.4.2
 numpy==1.26.4
 #opencv-contrib-python==4.11.0.86
-#opencv-python==4.11.0.86
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.0
 packaging==24.2
