--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 decorator==4.4.2
-#facenet-pytorch==2.6.0
+facenet-pytorch==2.6.0
 fer==22.5.1
-#ffmpeg==1.4
+ffmpeg==1.4
 filelock==3.17.0
 Flask==3.1.0
 Flask-Cors==4.0.0
@@ -40,7 +40,7 @@ mpmath==1.3.0
 namex==0.0.8
 networkx==3.4.2
 numpy==1.26.4
-#opencv-contrib-python==4.11.0.86
+opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.0
@@ -49,7 +49,7 @@ pandas==2.2.3
 pillow==10.2.0
 proglog==0.1.10
 protobuf==5.29.3
-#pygame==2.6.1
+pygame==2.6.1
 Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
