--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.0
 mdurl==0.1.2
 ml-dtypes==0.4.1
-#moviepy==1.0.3
+moviepy==1.0.3
 mpmath==1.3.0
 namex==0.0.8
 networkx==3.4.2
